﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version 1.2.0.10042 (1.2) 2010-02-11
	General description:
		This release has one small bug fix and several new features. The biggest new features are the ability
		to use an alternatively named configuration section and the addition of the TerminatorLoggingProvider
		and CompositeLoggingProvider.
	
	Bug fixes:
		-Exception message contained invalid example configuration.
		 The exception thrown in the situation where the <logging> section was missing or didn't contain a
		 'defaultProvider' attribute, contained an example configuration that was invalid. The <providers>
		 tag was missing.
	
	Code changes:
		-Configuration can now use an alternatively named configuration section name for work item 5109.
		-The Obsolete attribute of the LoggerWrapper class was removed from the library.
		-A new TerminatorLoggingProvider added for work item 4845.
		-A new CompositeLoggingProvider added for work item 4844.
		 Some internal changes had to be made to the Logger and LoggingProviderBase to make this possible.
		 The static Logger facade checked the configured providers for circular references during 
		 initialization to prevent stack overflows when providers logged to their fallback provider. The 
		 CompositeLoggingProvider allows referencing multiple providers and it was important to be able to
		 also check these references during initialization. To achieve this, two internal virtual methods were
		 added to the LoggingProviderBase class and the circular reference checking code in the Logger class
		 was refactored and extracted to it's own class: CircularReferenceFinder.
		-A new CompositeException was added for the CompositeLoggingProvider (work item 4844).
		 The CompositeLoggingProvider can log to multiple providers and logging to other providers will
		 continue, even when a providers failed. This means that this could lead to multiple failing providers.